panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typeof__test_typeof_of_function_is_decl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typeof/test_typeof_of_function_is_decl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typeof/test_typeof_of_function_is_decl.c"
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (declaration external puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (declaration external puts~4 `fn(∅: ptr<char const>) -> int` ∅)
         (declaration external puts~4 `fn(∅: ptr<char const>) -> int` ∅)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>) -> int>`
                  (puts~4 `fn(∅: ptr<char const>) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "it works\0")))))))))

----- stderr -----
